--- a/scss/Tennis.scss
+++ b/scss/Tennis.scss
@@ -8,7 +8,7 @@ $purp: #8D86C9;
 $black: #333333;
 
 body {
-    font-family: 'Gilroy';
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     line-height: 140%;
     height: 100%;
