--- a/scss/Tennis-news.scss
+++ b/scss/Tennis-news.scss
@@ -9,7 +9,7 @@ $black: #333333;
     left: 0;
     top: 0;
     z-index: 50;
-    background: url("/img/Rectangle 26-news.svg") center no-repeat;
+    background: url("./img/Rectangle 26-news.svg") center no-repeat;
     background-size: cover;
 }
 
