--- a/scss/Tennis.scss
+++ b/scss/Tennis.scss
@@ -28,7 +28,7 @@ body {
     top: 0;
     z-index: 50;
     border-bottom: solid 1px #aeaeaf;
-    background: url("/img/Rectangle 26.svg") center no-repeat;
+    background: url("./img/Rectangle 26.svg") center no-repeat;
     background-size: cover;
 }
 
@@ -286,7 +286,7 @@ body {
     line-height: 140%;
     color: $black;
     padding: 0px 0px 0px 24px;
-    list-style: url("/img/Rectangle\ 46.svg");
+    list-style: url("./img/Rectangle 46.svg");
 }
 
 .main-sport-club__title-list {
